--- a/toolbar.css
+++ b/toolbar.css
@@ -2,6 +2,11 @@
     position:sticky;
     background-color: darkgreen;
     font-weight: bold;
+    border-radius: 5px;
+    width:150px;
+    height: 100px;
+    border-width:1px;
+    border-color: greenyellow;
 
 }
 /*
